# o3de-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE-APACHE2.txt  LICENSE-MIT.txt  LICENSE.txt  NOTICE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  components.md  recipes.md  tool-reference.md
examples/: 01_new_project.md  02_build_scene.md  03_physics_playground.md  04_scripted_game.md  05_batch_operations.md  06_cli_only_workflow.md  07_gem_development.md  08_mcp_inspector.md
scripts/: generate-sbom.py  run-example-04.py
src/o3de_mcp/: __init__.py  server.py
src/o3de_mcp/tools/: assets.py  capabilities.py  editor.py  introspection.py  project.py
src/o3de_mcp/utils/: capabilities.py  introspection.py  o3de.py
tests/: __init__.py  conftest.py  test_assets.py  test_capabilities.py  test_editor.py  test_introspection.py  test_live_editor.py  test_live_no_editor.py  test_project.py
